# mcp-muse

./: .gitignore  CLASSIC_SYNTH_PRESETS_PLAN.md  CLAUDE.md  Cargo.toml  DEVELOPMENT_PLAN.md  LICENSE  R2D2_EXPRESSIVE_SYNTH_PLAN.md  README.md  VERSIONING.md  per_channel_effects_example.rs  test_consolidated_drums.py  test_direct_drums.py  test_drums_effects.json  test_drums_simple.json
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: auto-tag.yml  ci.yml  dependencies.yml  release.yml
dev-plans/: DEVELOPMENT_PLAN.md  R2D2_EXPRESSIVE_SYNTH_PLAN.md  SEQUENCE_PATTERNS.md
examples/: api_reference.md  basic_usage.md  mixed_victory_fanfare.json  simple_examples.md  troubleshooting.md
src/: main.rs
src/expressive/: effects_presets.rs  fundsp_effects.rs  fundsp_synth.rs  mod.rs  r2d2.rs  synth.rs  voice.rs
src/expressive/presets/: library.rs  mod.rs
src/expressive/presets/categories/: arps.rs  bass.rs  drums.rs  effects.rs  keys.rs  leads.rs  mod.rs  organs.rs  pads.rs
src/midi/: mod.rs  parser.rs  player.rs  polyphonic_source.rs
src/server/: mcp.rs  mod.rs  tools.rs
src/setup/: config.rs  mod.rs
src/setup/hosts/: mod.rs
src/tests/: mod.rs  polyphony_validation.rs
tests/: integration_tests.rs
tests/integration/: logging_fallback.rs  mcp_protocol.rs  mod.rs
