[package]
name = "mcp-muse"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
midly = "0.5"
rodio = "0.20.1"
oxisynth = "0.1"
dirs = "6.0.0"
anyhow = "1.0"
base64 = "0.22"
reqwest = { version = "0.12.20", features = ["blocking"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = "0.3"
zip = "4.0.0"
fundsp = "0.18"
