[package]
name = "mcp-muse"
version = "2025.11.1"
edition = "2024"
authors = ["Alex Trzyna"]
description = "MCP server providing authentic 16-bit SNES gaming sounds, R2D2 expressive emotions, and professional music synthesis for AI agents"
license = "MIT"
repository = "https://github.com/alextrzyna/mcp-muse"
homepage = "https://github.com/alextrzyna/mcp-muse"
documentation = "https://github.com/alextrzyna/mcp-muse#readme"
readme = "README.md"
keywords = ["mcp", "audio", "midi", "synthesizer", "music"]
categories = ["multimedia::audio", "command-line-utilities"]

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
midly = "0.5"
rodio = "0.21.1"
oxisynth = "0.1"
dirs = "6.0.0"
anyhow = "1.0"
base64 = "0.22"
reqwest = { version = "0.12.25", features = ["blocking"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = "0.3"
zip = "6.0.0"
fundsp = "0.20"
rand = "0.9.2"
lazy_static = "1.5"
